# tauri-plugin-aliyun-push

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts  proguard-rules.pro  settings.gradle
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: AliyunPushApplication.kt  AliyunPushMessageReceiver.kt  AliyunPushPlugin.kt  BuildConfig.kt  Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Frameworks/CloudPushSDK.xcframework/ios-arm64/CloudPushSDK.framework/: CloudPushSDK  Info.plist
ios/Frameworks/CloudPushSDK.xcframework/ios-arm64_x86_64-simulator/CloudPushSDK.framework/: Info.plist
ios/Sources/: ExamplePlugin.swift
ios/Sources/tauri-plugin-aliyun-push/: AliyunPushAppDelegate.swift  AliyunPushPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: bind_account.toml  bind_alias.toml  bind_tag.toml  check_push_channel_status.toml  turn_off_push_channel.toml  turn_on_push_channel.toml  unbind_account.toml  unbind_alias.toml  unbind_tag.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+1 files in other folders)
